[tool.poetry]
name = "undetected-browser-tool"
version = "0.0.0"
description = "A langchain tool implementation of Undetected with Selenium and Chrome for page fetching, making it easier to bypass bot detectors"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"
homepage = "https://github.com/thevgergroup/undetected-browser-tool"
repository = "https://github.com/thevgergroup/undetected-browser-tool.git"
keywords = ["AI", "Agents", "langchain", "undetected", "selenium", "chrome", "browser", "bot", "detection", "bypass"]
license = "MIT"
classifiers= [
                "Topic :: Scientific/Engineering :: Artificial Intelligence",
                "Topic :: Scientific/Engineering :: Information Analysis",
                "Topic :: Internet :: WWW/HTTP :: Browsers"
                ]

[tool.poetry.dependencies]
python = "^3.9"
langchain-core = "^0.2.34"
selenium = "^4.23.1"
undetected-chromedriver = "^3.5.5"
langchain = "^0.2.14"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
tox = "^4.18.0"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
pythonpath = "project"